feat: implement authentication with JWT and update security configurations